# wayclip

./: CLAUDE.md  Cargo.toml  README.md
crates/wayclip-client/: Cargo.toml
crates/wayclip-client/src/: main.rs
crates/wayclip-client/src/clipboard_item/: imp.rs  mod.rs
crates/wayclip-client/src/ipc/: client.rs  mod.rs
crates/wayclip-client/src/item_row/: imp.rs  mod.rs
crates/wayclip-client/src/window/: imp.rs  mod.rs
crates/wayclip-common/: Cargo.toml
crates/wayclip-common/src/: lib.rs  paths.rs  protocol.rs  types.rs
crates/wayclip-daemon/: Cargo.toml
crates/wayclip-daemon/src/: config.rs  main.rs
crates/wayclip-daemon/src/clipboard/: mod.rs  monitor.rs
crates/wayclip-daemon/src/database/: mod.rs  operations.rs  schema.rs
crates/wayclip-daemon/src/ipc/: mod.rs  server.rs
