[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "MIT"
authors = ["Harley"]
repository = "https://github.com/harley/wayclip"

[workspace.dependencies]
# Shared across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
base64 = "0.22"

# Daemon specific
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
rusqlite = { version = "0.32", features = ["bundled", "blob"] }
sha2 = "0.10"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

# Client specific
gtk4 = { version = "0.9", features = ["v4_12"] }
glib = "0.20"
gdk4 = "0.9"
gio = "0.20"
gdk-pixbuf = "0.20"
pango = "0.20"

# Common
wayclip-common = { path = "crates/wayclip-common" }
