[package]
name = "wayclip-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GTK 4 clipboard history client for Wayland"

[[bin]]
name = "wayclip"
path = "src/main.rs"

[dependencies]
wayclip-common.workspace = true

# GTK 4
gtk4.workspace = true
glib.workspace = true
gdk4.workspace = true
gio.workspace = true
gdk-pixbuf.workspace = true
pango.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# XDG paths
dirs.workspace = true
