[package]
name = "wayclip-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared types for wayclip clipboard manager"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dirs.workspace = true
base64.workspace = true
libc = "0.2"
