[package]
name = "wayclip-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Clipboard history daemon for Wayland"

[[bin]]
name = "wayclip-daemon"
path = "src/main.rs"

[dependencies]
wayclip-common.workspace = true

# Async runtime
tokio.workspace = true

# Database
rusqlite.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Crypto (for content hashing)
sha2.workspace = true
base64.workspace = true

# XDG paths
dirs.workspace = true

# Wayland
wayland-client.workspace = true
wayland-protocols-wlr.workspace = true

# Unix utilities (pipe creation)
nix = { version = "0.29", features = ["fs"] }

# Image dimension extraction
png = "0.17"

[dev-dependencies]
tempfile = "3"
